<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Codeview</string>

    <!-- Main interface -->
    <string name="main_label">Codeview</string>
    <string name="main_item_icon">Icon</string>
    <string name="cm_mark">Mark</string>
    <string name="cm_unmark">Unmark</string>
    <string name="cm_commit">Commit</string>
    <string name="cm_update">Update</string>
    <string name="cm_delete">Delete</string>

    <!-- FIleChooser -->
    <string name="fc_label">FileChooser</string>
    <string name="fc_item_icon">Icon</string>

    <!-- WebView -->
    <string-array name="webview_support">
        <item>.c</item>
        <item>.cpp</item>
        <item>.cs</item>
        <item>.css</item>
        <item>.h</item>
        <item>.hs</item>
        <item>.html</item>
        <item>.java</item>
        <item>.js</item>
        <item>.md</item>
        <item>.php</item>
        <item>.pm</item>
        <item>.pl</item>
        <item>.perl</item>
        <item>.py</item>
        <item>.rb</item>
        <item>.rtf</item>
        <item>.sh</item>
        <item>.tex</item>
        <item>.xml</item>
    </string-array>

    <!-- About and Mark interface -->
    <string name="mark_successful">Mark Successful.</string>
    <string name="showmark_label">Mark</string>
    <string name="showmark_item_icon">Icon</string>
    <string name="about_label">About</string>
    <string name="about_title_author">Author</string>
    <string name="about_title_thanks">Thanks</string>
    <string name="about_title_version">Version</string>
    <string name="about_title_homepage">Homepage</string>
    <string name="about_title_license">License</string>
    <string name="about_content_author">MatthewLee &lt;matthewlee0725@gmail.com&gt;</string>
    <string name="about_content_thanks">ChansZen &lt;chanszen@gmail.com&gt;</string>
    <string name="about_content_version">1.0.0</string>
    <string name="about_content_homepage">https://github.com/mthli/Codeview</string>
    <string name="about_content_license">Mozilla Public License Version 2.0</string>
    
    <!-- Setting interface -->
    <string name="setting_label">Setting</string>
    <string name="setting_title_fontsize">Font Size</string>
    <string name="setting_title_highlight">High Light</string>
    <string name="setting_title_breakword">Break Word</string>
    <string name="setting_content_fontsize">Set sourse code font size</string>
    <string name="setting_content_highlight">Choose high light style</string>
    <string name="setting_content_breakword">Break word setting</string>
    <string-array name="setting_array_fontsize">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string-array name="setting_array_highlight">
        <item>default</item>
        <item>arta</item>
        <item>ascetic</item>
        <item>ascetic-dune.dark</item>
        <item>ascetic-dune.light</item>
        <item>atelier-forest.dark</item>
        <item>atelier-forest.light</item>
        <item>atelier-heath.dark</item>
        <item>atelier-heath.light</item>
        <item>atelier-lakeside.dark</item>
        <item>atelier-lakeside.light</item>
        <item>atelier-seaside.dark</item>
        <item>atelier-seaside.light</item>
        <item>brown_paper</item>
        <item>brown_papersq</item>
        <item>dark</item>
        <item>docco</item>
        <item>far</item>
        <item>foundation</item>
        <item>github</item>
        <item>googlecode</item>
        <item>idea</item>
        <item>ir_black</item>
        <item>magula</item>
        <item>mono-blue</item>
        <item>monokai</item>
        <item>monokai_sublime</item>
        <item>obsidian</item>
        <item>paraiso.dark</item>
        <item>paraiso.light</item>
        <item>pojoaque</item>
        <item>railscasts</item>
        <item>rainbow</item>
        <item>school_book</item>
        <item>solarized_dark</item>
        <item>solarized_light</item>
        <item>sunburst</item>
        <item>tomorrow</item>
        <item>tomorrow-night-blue</item>
        <item>tomorrow-night-bright</item>
        <item>tomorrow-night</item>
        <item>tomorrow-night-eighties</item>
        <item>vs</item>
        <item>xcode</item>
        <item>zenburn</item>
    </string-array>
    <string-array name="setting_array_breakword">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="setting_ad_ok">OK</string>
    <string name="setting_ad_cancle">Cancel</string>
    <string name="setting_ad_close">Close</string>

    <!-- ActionBar -->
    <string name="drop_down_repo">Repo</string>
    <string name="drop_down_mark">Mark</string>
    <string name="menu_search">Clone</string>
    <string name="menu_showmark">Show Mark</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <!-- Clone -->
    <string name="clone_username">codeview</string>
    <string name="clone_password">311922</string>
    <string name="clone_successful">Clone Successful</string>
    <string name="clone_pd_new">Cloning...</string>
    <string name="clone_pd_update">Update...</string>

    <!-- Error -->
    <string name="url_error_https">Miss \"https://\" or \"http://\" At URL.</string>
    <string name="url_error_git">Miss \".git\" At URL.</string>
    <string name="git_error_clone">Clone Failed.</string>
    <string name="database_error_open">Database Open Failed.</string>
    <string name="unknown_error">Unknown Error.</string>

</resources>