<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/main_menu_search"
          android:title="@string/menu_search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView">
    </item>

    <item android:id="@+id/main_menu_showmark"
          android:title="@string/menu_showmark"
          android:icon="@drawable/ic_action_mark"
          android:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/main_menu_setting"
          android:title="@string/menu_setting"
          android:showAsAction="collapseActionView">
    </item>

    <item android:id="@+id/main_menu_help"
          android:title="@string/menu_help"
          android:showAsAction="collapseActionView">
    </item>

    <item android:id="@+id/main_menu_about"
          android:title="@string/menu_about"
          android:showAsAction="collapseActionView">
    </item>

</menu>